--- a/vacant/src/main/webapp/WEB-INF/web.xml
+++ b/vacant/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>vacant.listener.ContextListener</listener-class>
+	</listener>
 
 	<servlet>
 		<servlet-name>vacant</servlet-name>
