建立activiti运行环境

--- a/vacant/pom.xml
+++ b/vacant/pom.xml
@@ -146,5 +146,15 @@
 			<artifactId>jackson-mapper-lgpl</artifactId>
 			<version>1.9.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.activiti</groupId>
+			<artifactId>activiti-engine</artifactId>
+			<version>5.14</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.8</version>
+		</dependency>
 	</dependencies>
 </project>
