--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sjshjz
+spring.datasource.username=root
+spring.datasource.password=a
 
+server.port=80
+server.servlet.session.timeout=10
+server.tomcat.uri-encoding=UTF-8
