替换登录页面

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sjshjz
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
 spring.datasource.username=root
 spring.datasource.password=a
 
-server.port=80
+server.port=8080
 server.servlet.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
