--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
 spring.datasource.username=root
 spring.datasource.password=a
 
+#spring.jdbc.template.max-rows=500
+
 server.port=8080
 server.servlet.session.timeout=10
 server.tomcat.uri-encoding=UTF-8
