--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -10,6 +10,6 @@ server.tomcat.uri-encoding=UTF-8
 
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
+spring.thymeleaf.servlet.content-type=text/html
 
 spring.thymeleaf.cache=false
