修改数据库用户、密码

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
-spring.datasource.username=root
-spring.datasource.password=a
+spring.datasource.username=demo
+spring.datasource.password=demo
 
 #spring.jdbc.template.max-rows=500
 
