--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+debug=true
+
+
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
 spring.datasource.username=demo
 spring.datasource.password=demo
