--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,8 +9,11 @@ spring.http.encoding.enabled=true
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
 spring.datasource.username=demo
 spring.datasource.password=demo
-
 #spring.jdbc.template.max-rows=500
+
+spring.servlet.multipart.max-file-size=10383360
+spring.servlet.multipart.max-request-size=31150080
+
 
 server.port=8080
 server.servlet.session.timeout=10
@@ -19,5 +22,4 @@ server.tomcat.uri-encoding=UTF-8
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
-
 spring.thymeleaf.cache=false
