实现全局事务支持

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #logging.level.root=debug
 #logging.level.web=debug
-
+logging.level.security=debug
 
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
-spring.datasource.username=demo
-spring.datasource.password=demo
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
+#spring.datasource.username=demo
+#spring.datasource.password=demo
 #spring.jdbc.template.max-rows=500
 
 spring.servlet.multipart.max-file-size=10383360
@@ -23,3 +23,28 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
+
+# JTA (JtaAutoConfiguration)
+# spring.jta.enabled=true # Whether to enable JTA support.
+# spring.jta.log-dir= # Transaction logs directory.
+# spring.jta.transaction-manager-id= # Transaction manager unique identifier.
+
+spring.jta.datasource.unique-resource-name=datasource
+spring.jta.datasource.xa-data-source-class-name=com.alibaba.druid.pool.xa.DruidXADataSource
+#spring.jta.datasource1.xa-properties.driverClassName=com.mysql.jdbc.Driver
+spring.jta.datasource.xa-properties.username=demo
+spring.jta.datasource.xa-properties.password=demo
+spring.jta.datasource.xa-properties.url=jdbc:mysql://127.0.0.1:3306/demo
+
+spring.jta.datasource2.unique-resource-name=datasource2
+spring.jta.datasource2.xa-data-source-class-name=com.alibaba.druid.pool.xa.DruidXADataSource
+#spring.jta.datasource2.xa-properties.driverClassName=com.mysql.jdbc.Driver
+spring.jta.datasource2.xa-properties.username=demo
+spring.jta.datasource2.xa-properties.password=demo
+spring.jta.datasource2.xa-properties.url=jdbc:mysql://127.0.0.1:3306/demo2
+# JTA end
+
+
+
+
+
